--- a/as-css/estilo.css
+++ b/as-css/estilo.css
@@ -10,14 +10,13 @@ main{
     margin: 15px;
     display: block;
     grid-template-columns: repeat(4,1fr);
-    grid-template-rows: repeat(4,auto);
-    grid-template-areas: 
-    "input input input "
-    "button button button"
-    "button button button"
+    grid-template-rows: repeat(5,auto);
+    
     
 }
 input{
+  grid-column: 1/-1;
+  grid-row: 1/2;
    width: 30vw;
 }
 button{
