--- a/as-css/estilo.css
+++ b/as-css/estilo.css
@@ -8,12 +8,12 @@ body{
   margin: auto;
 }
 div.center{
- 
+  max-width: 600px;
   position: absolute;
   top: 50%;
   right: 50%;
   transform: translate(50% ,-50%);
-  width: 90%;
+ 
   height: 80%;
 }
 div > h1 {
@@ -28,8 +28,8 @@ main{
   display: grid;
   /* flex-direction: row; */
 
-    max-width: 600px;
-    height: 80%;
+   
+    height: 100%;
     /* justify-content: space-between;
     flex-wrap: wrap; */
     gap: 5px;
@@ -41,7 +41,7 @@ input{
 
   border-radius: 30px;
   border: none;
-  width: 95%;
+  min-width: 95vw;
   height: 15vh;
  font-size: 2em;
   padding:0 0 0 10px;
@@ -68,4 +68,10 @@ button:hover{
 }
 button:nth-child(1){
  
+}
+
+@media screen and (min-width:602px) {
+  input {
+    min-width: 95%;
+  }
 }
